[workspace]
members = [
    "helloworld",
    "guessing_game",
    "variables",
    "functions",
    "branches",
    "loops",
    "ownership",
    "slice",
    "learn_struct",
]

[[bin]]
name = "helloworld"
path = "helloworld/src/main.rs"

[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"
