[workspace]
members = [
    "helloworld",
    "guessing_game",
    "variables",
    "functions",
    "branches",
    "loops",
    "ownership",
    "slice",
    "learn_struct",
    "rectangles", "learn_enum", "learn_match",
]

[[bin]]
name = "helloworld"
path = "helloworld/src/main.rs"

[package]
name = "learn_rust"
version = "0.1.0"
edition = "2021"
